--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body oncontextmenu="return false">
 
-<!-- pre loader dskk -->
+<!-- pre loader ds -->
 <!-- <div class="loader-container">
   <img draggable="false" src="./assets/images/preloader.gif" alt="">
 </div> -->
