--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
      </div>
 
      <div class="container">
-       <h1 class="subheading"><i class="fas fa-chevron-right"></i><span>Abilities</span></h1>
+       <!--<h1 class="subheading"><i class="fas fa-chevron-right"></i><span>Abilities</span></h1> -->
 
           <div class="row" id="skillsContainer">
 
