--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> Dineth Sandeepa Keerthi</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/dineth-sandeepa-keerthi-b47879213"> Dineth Sandeepa Keerthi</a></h1>
 
 </section>
 <!-- footer section ends -->
