--- a/projects/index.html
+++ b/projects/index.html
@@ -160,7 +160,7 @@
 
 
   <div class="backbtn">
-    <a href="D:\Portfolio- Dineth sandeepa- main\Code file\index.html" class="btn">
+    <a href="\index.html" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
