--- a/projects/index.html
+++ b/projects/index.html
@@ -160,7 +160,7 @@
 
 
   <div class="backbtn">
-    <a href="D:\DINETH-SANDEEPA---Portfolio-Website---main\index.html" class="btn">
+    <a href="\DINETH-SANDEEPA---Portfolio-Website---main\index.html" class="btn">
         <i class="fas fa-arrow-left"></i>
         <span>Back to Home</span>
   </a>
