--- a/projects/index.html
+++ b/projects/index.html
@@ -23,13 +23,13 @@
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
-            <li><a href="D:\Portfolio- Dineth sandeepa- main\Code file\index.html#Home">Home</a></li>
-            <li><a href="D:\Portfolio- Dineth sandeepa- main\Code file\index.html#about">About</a></li>
-            <li><a href="D:\Portfolio- Dineth sandeepa- main\Code file\index.html#skills">Skills</a></li>
-            <li><a href="D:\Portfolio- Dineth sandeepa- main\Code file\index.html#education">Education</a></li>
-            <li><a class="active" href="D:\Portfolio- Dineth sandeepa- main\Code file\index.html#work">Work</a></li>
-            <li><a href="D:\Portfolio- Dineth sandeepa- main\Code file\index.html#experience">Experience</a></li>
-            <li><a href="D:\Portfolio- Dineth sandeepa- main\Code file\index.html#contact">Contact</a></li>
+            <li><a href="\DINETH-SANDEEPA---Portfolio-Website---main\index.html#Home">Home</a></li>
+            <li><a href="\DINETH-SANDEEPA---Portfolio-Website---main\index.html#about">About</a></li>
+            <li><a href="\DINETH-SANDEEPA---Portfolio-Website---main\index.html#skills">Skills</a></li>
+            <li><a href="\DINETH-SANDEEPA---Portfolio-Website---main\index.html#education">Education</a></li>
+            <li><a class="active" href="\DINETH-SANDEEPA---Portfolio-Website---main\index.html#work">Work</a></li>
+            <li><a href="\DINETH-SANDEEPA---Portfolio-Website---main\index.html#experience">Experience</a></li>
+            <li><a href="\DINETH-SANDEEPA---Portfolio-Website---main\index.html#contact">Contact</a></li>
             </ul>
         </nav>
 </header>
