--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="./assets/images/hero.png" alt="">
+    <img draggable="false" class="tilt" src="./assets/images/hero2.jpeg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
