--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
         <h3>I'm D S Keerthi</h3>
         <span class="tag">MECHATRONICS ENGINEER</span>
         
-        <p>A motivated engineering graduate seeking a full-time position to advance my engineering career
-           and apply my passion for innovation and problem-solving. Excellent communicator with a strong ability to be detailed, analytical, and collaborate effectively.
-           Ready to expand my knowledge and contribute to cutting-edge projects to make a meaningful impact and gain hands-on engineering experience. 
-           Committed to growth and eager to excel in a dynamic engineering environment. </p>
+        <p>Entry-Level Automation / Mechatronics Engineer with hands-on experience in industrial automation,
+           PLC programming, SCADA, HMI, robotics, and embedded systems. Skilled in machine automation, 
+           PLC-based control systems, sensors and actuators, pneumatic systems, commissioning, and troubleshooting
+           electronic & mechanical equipment. Completed internships at INQUBE Global and SLINTEC.
+           Seeking an Automation Engineer / PLC Engineer role in a technology-driven organization. </p>
         
         <div class="box-container">
             <div class="box">
