--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!-- navbar starts -->
 <header>
         <a href="/" class="logo">
-          <img src="./assets/images/DSK.png" alt="DSK Logo" style="height: 45px;"></i> D S KEERTHI</a>
+          <img src="./assets/images/DSKNEW.png" alt="DSK Logo" style="height: 45px;"></i> D S KEERTHI</a>
         </a>
 
         <div id="menu" class="fas fa-bars"></div>
