--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
+      <img draggable="false" src="./assets/images/projects/inqube.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Designed, Assembled, and controlled wire inserter machine for Inqube Global (PVT)LTD.</h3>
