--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
+      <img draggable="false" src="./assets/images/projects/lineF.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Grid following robot with pick and place, robot arm.</h3>
