--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
+      <img draggable="false" src="./assets/images/projects/cnvr.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>AC Servo motor-based Tested Conveyer belt sortingsystem for the industrial production line.</h3>
