--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 <div class="box-container">
 
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/projects/portfolio1.PNG" alt="" />
+      <img draggable="false" src="./assets/images/projects/lqfln.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>FEM54 Sensor-based industrial liquid Filling System.</h3>
