--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://drive.google.com/drive/folders/1gxCy_UpSFwa6Nx3SJJ98aV9GEizT8z1o?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://drive.google.com/drive/folders/1Q-96vV5hmG99MbXFsTwWKyQOri33fKia?usp=sharing" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -352,8 +352,8 @@
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://drive.google.com/drive/folders/1gqMmhr5cVg4ySjtqAlgmILfUozugfvTW?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://drive.google.com/drive/folders/1OPOVkQo09K80h8eTfHqYfiPgS7I4oYz6?usp=sharing" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -372,8 +372,8 @@
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://drive.google.com/drive/folders/1h-iOna7KItMI9R13S33QG8UFoWznFH9X?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://drive.google.com/drive/folders/1Eqpk6DDedqDxUjGrxB5yREcMUnsIgiUL?usp=sharing" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -392,8 +392,8 @@
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://drive.google.com/drive/folders/15esNyPKR7NQkjVGtDVlUT2WHjsWxBNAz?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://drive.google.com/drive/folders/1dDeSfvJR95ULFo0x9YoEIYgZFTTMJbOp?usp=sharing" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
@@ -412,8 +412,8 @@
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+            <a href="https://drive.google.com/drive/folders/1bO6ZW--QSZ7KFCPkUNmoaOD4ofBxU8SI?usp=sharing" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://drive.google.com/drive/folders/12t2C9ZPEq75n5dfCXr5VAKK8KydCPOXP?usp=sharing" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
       </div>
