--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li><a class="twitter" aria-label="Twitter" href="https://x.com/dinethsk425?s=11" target="_blank"><i class="fab fa-twitter"></i></a></li>
           <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/dinethskeerthi?igsh=MTcybzFtMXg4ZDc4aw%3D%3D&utm_source=qr"><i class="fab fa-instagram" target="_blank"></i></a></li>
-          <li><a class="dev" aria-label="Dev" href="https://dev.to/jigarsable" target="_blank"><i class="fab fa-youtube"></i></a></li>
+          <li><a class="youtube" aria-label="youtube" href="https://youtube.com/@dinethsandeepakeerthi?si=R0Zei5ZhNrqcUtBn" target="_blank"><i class="fab fa-youtube"></i></a></li>
         </ul>
       </div>
     </div>
