--- a/experience/index.html
+++ b/experience/index.html
@@ -52,7 +52,7 @@
 
     
      <div class="box tilt mern">
-      <img src="/assets/images/projects/agecalc.PNG" alt="" />
+      <img src="./images/DSK.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Portfolio Website</h3>
