--- a/projects/index.html
+++ b/projects/index.html
@@ -52,10 +52,10 @@
 
     
      <div class="box tilt mern">
-      <img src="./images/DSK.png" alt="" />
+      <img src="./images/grbl.jpg" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>Portfolio Website</h3>
+        <h3>GRBL firmware Customization</h3>
         </div>
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
