--- a/projects/index.html
+++ b/projects/index.html
@@ -84,10 +84,10 @@
     </div>  
     
     <div class="box tilt lamp">
-      <img src="./images/DSK.png" alt="" />
+      <img src="./images/portf.png" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>Portfolio Website</h3>
+        <h3>Portfolio, D S Keerthi</h3>
         </div>
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
