--- a/projects/index.html
+++ b/projects/index.html
@@ -126,7 +126,7 @@
       <img src="./images/DSK.png" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>Portfolio Website</h3>
+        <h3>Project</h3>
         </div>
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
@@ -142,7 +142,7 @@
       <img src="./images/DSK.png" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>Portfolio Website</h3>
+        <h3>Project</h3>
         </div>
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
