--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/dineth-sandeepa-keerthi-b47879213" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
           <li><a class="github" aria-label="GitHub" href="https://github.com/DinethSandeepaKeerthi" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="twitter" aria-label="Twitter" href="https://x.com/dinethsk425?s=11" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="mailto:dinethsandeepa425@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
+          <li><a class="telegram" aria-label="Gmail" href="mailto:dinethsandeepa425@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/dinethskeerthi?igsh=MTcybzFtMXg4ZDc4aw%3D%3D&utm_source=qr"><i class="fab fa-instagram" target="_blank"></i></a></li>
           <li><a class="youtube" aria-label="youtube" href="https://youtube.com/@dinethsandeepakeerthi?si=R0Zei5ZhNrqcUtBn" target="_blank"><i class="fab fa-youtube"></i></a></li>
         </ul>
@@ -600,8 +600,8 @@
               <a href="https://www.linkedin.com/in/dineth-sandeepa-keerthi-b47879213" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
               <a href="https://github.com/DinethSandeepaKeerthi" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:dinethsandeepa425@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
-              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://x.com/dinethsk425?s=11" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
+              <a href="https://youtube.com/@dinethsandeepakeerthi?si=R0Zei5ZhNrqcUtBn" class="fab fa-youtube" aria-label="youtube" target="_blank"></a>
           </div>
       </div>
   </div>
